fix: light mode wasn't overriding system dark mode

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -73,7 +73,9 @@
    * -------------------------------------------
    */
 
-  body {
+   // The :not(.light) is used to prevent the system theming when .light mode is manually set
+
+  body:not(.light) {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -143,7 +145,7 @@
    * -------------------------------------------
    */
 
-  .ios body {
+  .ios body:not(.light) {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -183,7 +185,7 @@
    * -------------------------------------------
    */
 
-  .md body {
+  .md body:not(.light) {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
@@ -222,8 +224,7 @@
   }
 }
 
-// Not color-scheme support for browsers
-
+// Manual dark mode override (useful when system theme is light)
 body.dark {
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66, 140, 255;
